<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="structEventViewMsg" Id="{ed70df21-0d48-484e-85f3-d55ac78a9628}">
    <Declaration><![CDATA[TYPE structEventViewMsg :
STRUCT
	//combined implementation
	msgArry: ARRAY[1..gHMIDataConst.gNumberOfMessagesScreen] OF typeNewMsg;
	msgArryStyle: ARRAY[1..gHMIDataConst.gNumberOfMessagesScreen] OF typeNewMsgStyle;
	msgHeader:typeNewMsgHeader;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>